--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "serverless-mysql": "^1.5.5"
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.6"
   }
 }
